# python-cmudict

./: .gitmodules  .pylintrc  .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  README.rst  pyproject.toml  setup.cfg  setup.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: autoapprove-prs.yaml  dependabot-batcher.yaml  pypi-publish.yml  pypi-test-publish.yml  python-ci.yml  python-release.yml
cmudict/: __init__.py  __main__.py  cmudict.py
src/cmudict/: __init__.py
test/: test_cmudict.py  test_compatability.py  test_streams.py  test_wheres.py
tests/: test_cmudict.py  test_compatability.py
