[project]
name = "cmudict"
dynamic = [ "version", "classifiers" ]
description = "A versioned python wrapper package for The CMU Pronouncing Dictionary data files."
license = { text = "GPL-3.0-or-later" }
readme = "README.md"
requires-python = ">=3.9,<4.0"
authors = [
    { name = "David L. Day", email = "david@davidlday.com" }
]
keywords = ["cmudict"]
dependencies = [
    "importlib-metadata >=5",
    "importlib-resources >=5",
]

[project.urls]
homepage = "https://github.com/prosegrinder/python-cmudict"
repository = "https://github.com/prosegrinder/python-cmudict"
"Bug Tracker" = "https://github.com/prosegrinder/python-cmudict/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.commitizen]
tag_format = "v$version"
update_changelog_on_bump = true
changelog_incremental = true
bump_message = "bump: $current_version → $new_version"
version_provider = "poetry"

[tool.poetry]
version = "1.0.33"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic",
]
exclude = [
    "src/cmudict/data/.git"
]

[tool.poetry.group.dev.dependencies]
pytest = ">=6.2.2"
coverage = {extras = ["toml"], version = ">=6.5"}
pytest-cov = ">=4.0"
pylint = ">=3"
black = ">=22.10"
mypy = "^1.17.0"
bandit = "^1.8.6"

[tool.pytest.ini_options]
filterwarnings = [
    # note the use of single quote below to denote "raw" strings in TOML
    'ignore:open_binary is deprecated. Use files\(\) instead.:DeprecationWarning',
]

[tool.coverage.paths]
source = ["src", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["cmudict"]

[tool.coverage.report]
show_missing = true
fail_under = 100
