[metadata]
name = cmudict
version = file: src/cmudict/VERSION
author = David L. Day
author_email = dday376@gmail.com
description = "A versioned python wrapper package for The CMU Pronouncing Dictionary data files."
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
url = https://github.com/prosegrinder/python-cmudict
project_urls =
    Bug Tracker = https://github.com/prosegrinder/python-cmudict/issues
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: English
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >= 2.7
package_dir =
    = src
packages = find:
include_package_data = True
setup_requires =
    setuptools
build_requires =
    build
tests_requires =
    pytest

[options.packages.find]
where = src

[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar
